--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   provider: elasticbeanstalk
   region: "eu-central-1"
   app: "docker-react"
-  env: "Docker-env" 
+  env: "DockerReact-env"  
   bucket_name: "elasticbeanstalk-eu-central-1-021522032731"
   bucket_path: "docker-react"
   on:
